# netfr

./: .gitignore  .gitmodules  LICENSE  README.md
docs/: arch.rst
netfr/: CMakeLists.txt  README.md
netfr/include/: nfr_client.hpp  nfr_protocol.h  nfr_server.hpp  nfr_util.hpp  nfr_vmsg.hpp
netfr/include/netfr/: netfr.h  netfr_client.h  netfr_constants.h  netfr_host.h
netfr/src/: nfr_client.cpp  nfr_server.cpp  nfr_util.cpp  nfr_vmsg.cpp
netfr/src/client/: nfr_client.c  nfr_client.h  nfr_client_callback.c  nfr_client_callback.h
netfr/src/common/: nfr.c  nfr.h  nfr_callback.h  nfr_constants.h  nfr_log.c  nfr_log.h  nfr_mem.c  nfr_mem.h  nfr_protocol.h  nfr_resource.c  nfr_resource.h  nfr_resource_types.h
netfr/src/host/: nfr_host.c  nfr_host.h  nfr_host_callback.c  nfr_host_callback.h
netfr/test/client/: CMakeLists.txt  client.c
netfr/test/host/: CMakeLists.txt  host.c
